# go-ldflags

./: .gitignore  BUILD.bazel  Makefile  WORKSPACE  main.go  status.sh
version/: BUILD.bazel  version.go
