load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
    ],
    importpath = "github.com/kentakozuka/go-ldflags",
    visibility = ["//visibility:public"],
    deps = [
        "//version:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = {
        "github.com/kentakozuka/go-ldflags/version.Version": "{VERSION}",
        "github.com/kentakozuka/go-ldflags/version.Hash": "{HASH}",
	    "github.com/kentakozuka/go-ldflags/version.Builddate": "{BUILDDATE}",
	    "github.com/kentakozuka/go-ldflags/version.Goversion": "{GOVERSION}",
    },
)
